test/Fail/MacroNotToTerm.err
MacroNotToTerm.agda:11.3-10: error: [MacroResultTypeMismatch]
Result type of a macro must be Term → TC ⊤
